{
    "name": "Controls",
    "maps": [
        {
            "name": "Player",
            "id": "c742776b-02d4-4784-b169-aeed29b078df",
            "actions": [
                {
                    "name": "ChangeVelocityX",
                    "type": "Value",
                    "id": "e7c8206c-9705-430e-aaa6-609c02942135",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ChangeVelocityY",
                    "type": "Value",
                    "id": "4edaa4e7-5684-45fb-8c9e-ddb91bc1f6ab",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PickUp",
                    "type": "Value",
                    "id": "49b1994e-ae16-440b-9e1e-b874d858e01b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Horizontal",
                    "id": "b8a1a616-fc7c-482b-bfbf-a161a135fe33",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeVelocityX",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "93c9b325-f8fe-4c86-a402-e2f9166b4e49",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeVelocityX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ab18839e-c64b-4388-8179-8f8ef2fec9ac",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeVelocityX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Vertical",
                    "id": "e88ff7e7-d9de-40ff-a0fd-a102c193da5f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeVelocityY",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "94d406d9-c111-4b9b-9b99-e43797643fdb",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeVelocityY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b1136f81-d2e4-4c6b-a068-b87573b5c54a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeVelocityY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "fe88e23b-437b-4403-adb3-890d9b565bf2",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}